--- a/app.css
+++ b/app.css
@@ -19,6 +19,12 @@ body {
   font-family: "Inter";
 }
 
+button:focus {
+  border: 1px solid transparent;
+  box-shadow: 0px 0px 0px 5px #005bd3, 0px 0px 0px 3px #fff,
+    0px 0px 0px 1.5px #333;
+}
+
 a {
   text-decoration: none;
 }
@@ -265,7 +271,7 @@ main {
 .step-guide-data {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  /* gap: 1rem; */
   width: 100%;
 }
 
@@ -359,11 +365,8 @@ main {
   gap: 6rem;
   align-self: stretch;
   border-radius: 0.625rem;
-  background: #f3f3f3;
-}
-
-.step-guide-detail {
-  padding-left: 0.5rem;
+  /* background: #f3f3f3; */
+  background: transparent;
 }
 
 .broken-circle {
@@ -389,9 +392,10 @@ main {
 }
 
 .guide-txt {
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   gap: 1rem;
+  display: none;
 }
 
 .guide-title {
@@ -401,10 +405,7 @@ main {
   font-style: normal;
   font-weight: 500;
   line-height: 140%;
-}
-
-.active-guide-title {
-  font-weight: 600;
+  cursor: pointer;
 }
 
 .guide-body-txt {
@@ -465,6 +466,7 @@ main {
   width: 9.75906rem;
   height: 7.5rem;
   flex-shrink: 0;
+  display: none;
 }
 
 .guide-detail-cta {
@@ -738,6 +740,22 @@ main {
   font-style: normal;
   font-weight: 600;
   line-height: 140%;
+}
+
+.show-guide .guide-txt {
+  display: flex;
+}
+
+.show-guide .guide-detail-img {
+  display: inline;
+}
+
+.show-guide .guide-title {
+  font-weight: 600;
+}
+
+.show-guide {
+  background: #f3f3f3;
 }
 
 /**************************************** Media Queries ****************************************/
