--- a/app.css
+++ b/app.css
@@ -19,12 +19,6 @@ body {
   font-family: "Inter";
 }
 
-button:focus {
-  border: 1px solid transparent;
-  box-shadow: 0px 0px 0px 5px #005bd3, 0px 0px 0px 3px #fff,
-    0px 0px 0px 1.5px #333;
-}
-
 a {
   text-decoration: none;
 }
@@ -369,10 +363,44 @@ main {
   background: transparent;
 }
 
-.broken-circle {
+.checkbox {
   width: 1.5rem;
   height: 1.5rem;
   cursor: pointer;
+}
+
+.full-circle {
+  display: none;
+}
+
+.rotate-circle {
+  display: none;
+}
+
+.checked-icon {
+  display: none;
+}
+
+.show-rotate-circle {
+  display: block;
+  animation: rotateIcon 0.3s linear infinite;
+}
+
+@keyframes rotateIcon {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.checkbox:hover .broken-circle-icon {
+  display: none;
+}
+
+.checkbox:hover .full-circle {
+  display: block;
 }
 
 .guide-detail-block {
