--- a/app.css
+++ b/app.css
@@ -43,6 +43,13 @@ button {
   outline: none;
 }
 
+button:focus {
+  border-radius: 6px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 0px 3px #005bd3, 0px 0px 0px 1px #fff,
+    0px -1px 0px 0px #b5b5b5 inset;
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -136,6 +143,7 @@ main {
 
 .bell-box:hover {
   background: var(--font-mid-2, #616161);
+  transition: 0.3s;
 }
 
 .user {
@@ -150,6 +158,7 @@ main {
 
 .user:hover {
   background: var(--font-mid-2, #616161);
+  transition: 0.3s;
 }
 
 .user-name {
@@ -219,14 +228,6 @@ main {
   border-radius: 0.375rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background: var(--White, #fff);
-}
-
-.select-a-plan-btn:hover {
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  background: #f7f7f7;
-}
-
-.select-a-plan-btn-txt {
   color: var(--font-dark, #323232);
   font-family: "Inter";
   font-size: 0.75rem;
@@ -234,6 +235,20 @@ main {
   font-weight: 600;
   line-height: 130%;
 }
+
+.select-a-plan-btn:hover {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background: #f7f7f7;
+}
+
+/* .select-a-plan-btn-txt {
+  color: var(--font-dark, #323232);
+  font-family: "Inter";
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 130%;
+} */
 
 .select-a-plan-close-box {
   display: flex;
@@ -247,6 +262,7 @@ main {
   width: 1.25rem;
   height: 1.25rem;
   cursor: pointer;
+  background: transparent;
 }
 
 .step-guide {
@@ -333,9 +349,16 @@ main {
   width: 0%;
   display: block;
   height: inherit;
-  background: #1a1a1a;
+  color: #1a1a1a;
   border-radius: 18%;
   transition: 0.3s;
+}
+
+.steps-completed-bar::-webkit-progress-bar {
+  background: #1a1a1a;
+}
+.steps-completed-bar::-moz-progress-bar {
+  background: #1a1a1a;
 }
 
 .step-guide-arrow {
@@ -346,6 +369,7 @@ main {
   border-radius: 0.375rem;
   cursor: pointer;
   transition: 0.3s;
+  background: transparent;
 }
 
 .step-guide-arrow-rotate {
@@ -368,6 +392,7 @@ main {
   width: 1.5rem;
   height: 1.5rem;
   cursor: pointer;
+  background: transparent;
 }
 
 .full-circle {
@@ -435,6 +460,7 @@ main {
   font-weight: 500;
   line-height: 140%;
   cursor: pointer;
+  width: 100%;
 }
 
 .guide-body-txt {
